--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is version 2 </h1>
+    <h1>this is version third version of the project </h1>
 </body>
 </html>
